<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CountryFragment">

        <ImageView
            android:id="@+id/countryImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/contentFlag"
            android:minHeight="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/countryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/countryName"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/capitalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/capitalName"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/regionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/capitalName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/regionName"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/currencyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regionName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/currencyName"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/languageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currencyName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/languageName"
            android:textSize="15sp" />


    </RelativeLayout>
</layout>